added smooth_curve translation

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Създаване на интелигентен договор",
   "smart_contract_payment": "Плащане на интелигентен договор",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Гладка крива",
   "standard_fee": "стандарт",
   "start_date": "От дата",
   "start_forging": "Започни коване",
