--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Creació de contractes intel·ligents",
   "smart_contract_payment": "Pagament del contracte intel·ligent",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Corba suau",
   "standard_fee": "Estàndard",
   "start_date": "Data d'inici",
   "start_forging": "Començar a Forjar",
