--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Vytvoření inteligentní smlouvy",
   "smart_contract_payment": "Platba inteligentní smlouvy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Hladká křivka",
   "standard_fee": "Standard",
   "start_date": "Počátek",
   "start_forging": "Zahájit forging",
