--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Smart Contract Erstellung",
   "smart_contract_payment": "Bezahlung von Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Glatte Kurve",
   "standard_fee": "Standard",
   "start_date": "Startdatum",
   "start_forging": "Blockgeneration starten",
