--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Δημιουργία έξυπνης σύμβασης",
   "smart_contract_payment": "Πληρωμή της έξυπνης σύμβασης",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Λεία καμπύλη",
   "standard_fee": "Πρότυπο",
   "start_date": "Ημερομηνία έναρξης",
   "start_forging": "Ξεκινήστε Forging",
