--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -826,6 +826,7 @@
   "smart_contract_creation": "Smart Contract Creation",
   "smart_contract_payment": "Payment of Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Smooth Curve",
   "standard_fee": "Standard",
   "start_date": "Start Date",
   "start_forging": "Start Forging",
