--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Creación de contrato inteligente",
   "smart_contract_payment": "Pago de contrato inteligente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Estándar",
   "start_date": "Fecha de Inicio",
   "start_forging": "Comenzar a Forjar",
