--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Älykäs sopimusten luominen",
   "smart_contract_payment": "Älykkään sopimuksen maksaminen",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Tasainen käyrä",
   "standard_fee": "standardi",
   "start_date": "Aloituspäivä",
   "start_forging": "Aloita taonta",
