--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Création de contrat intelligent",
   "smart_contract_payment": "Paiement du contrat intelligent",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Courbe Lisse",
   "standard_fee": "la norme",
   "start_date": "Date de début",
   "start_forging": "Commencer à forger",
