--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "स्मार्ट कॉन्ट्रैक्ट क्रिएशन",
   "smart_contract_payment": "स्मार्ट अनुबंध का भुगतान",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "चिकनी वक्र",
   "standard_fee": "मानक",
   "start_date": "प्रारंभ दिनांक",
   "start_forging": "शुरू कर फोर्जिंग",
