--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Stvaranje pametnog ugovora",
   "smart_contract_payment": "Plaćanje pametnog ugovora",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Glatka krivulja",
   "standard_fee": "Standard",
   "start_date": "Početni datum",
   "start_forging": "Započni kovati",
