--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Penciptaan Kontrak Cerdas",
   "smart_contract_payment": "Pembayaran Kontrak Cerdas",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Kurva halus",
   "standard_fee": "Standar",
   "start_date": "Tanggal Mulai",
   "start_forging": "Mulai penyusunan",
