--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Creazione intelligente di contratti",
   "smart_contract_payment": "Pagamento di Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva morbida",
   "standard_fee": "Standard",
   "start_date": "Data inizio",
   "start_forging": "Inizia a forgiare",
