--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "スマート契約の作成",
   "smart_contract_payment": "スマート契約の支払い",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "滑らかな曲線",
   "standard_fee": "標準",
   "start_date": "開始日",
   "start_forging": "鋳造を開始します。",
