--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "„Smart“ sutarties sudarymas",
   "smart_contract_payment": "Išmaniosios sutarties mokėjimas",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Sklandi kreivė",
   "standard_fee": "Standartinis",
   "start_date": "Pradžios Data",
   "start_forging": "Pradėti \"kalti",
