--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -826,6 +826,7 @@
   "smart_contract_creation": "Inteligentne tworzenie kontraktu",
   "smart_contract_payment": "Płatność inteligentnej umowy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Gładka krzywa",
   "standard_fee": "Standard",
   "start_date": "Data rozpoczęcia",
   "start_forging": "Rozpocznij Forging",
