--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Crearea inteligentă a contractelor",
   "smart_contract_payment": "Plata contractului inteligent",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Smooth Curve",
   "standard_fee": "Standard",
   "start_date": "Data începerii",
   "start_forging": "Începe forjarea",
