--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Создание смарт-контракта",
   "smart_contract_payment": "Оплата Смарт Контракт",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Гладкая кривая",
   "standard_fee": "стандарт",
   "start_date": "Дата начала",
   "start_forging": "Начать Форжинг",
