--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Vytvorenie inteligentnej zmluvy",
   "smart_contract_payment": "Platba inteligentnej zmluvy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Hladká krivka",
   "standard_fee": "štandardné",
   "start_date": "Dátum začatia",
   "start_forging": "Začať kovanie",
