--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Стварање паметних уговора",
   "smart_contract_payment": "Плаћање паметног уговора",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Смоотх Цурве",
   "standard_fee": "Стандард",
   "start_date": "Почетни Датум",
   "start_forging": "Почните Ковати",
