--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Akıllı Sözleşme Oluşturma",
   "smart_contract_payment": "Akıllı Sözleşme Ödemesi",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Yumuşak kavis",
   "standard_fee": "Standart",
   "start_date": "Başlangıç tarihi",
   "start_forging": "Dövmeye başla",
