--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Створення смарт-контракту",
   "smart_contract_payment": "Оплата смарт-контракту",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Плавна крива",
   "standard_fee": "Стандарт",
   "start_date": "Дата початку",
   "start_forging": "Почати форжинг",
