--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "智能合约创建",
   "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "平滑曲线",
   "standard_fee": "标准",
   "start_date": "开始日期",
   "start_forging": "开始锻造",
