--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Creación de contratos intelixentes",
   "smart_contract_payment": "Pago de contrato intelixente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Standard",
   "start_date": "Data de inicio",
   "start_forging": "Comenzar a forxar",
