--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Slimme contractvorming",
   "smart_contract_payment": "Betaling van Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Gladde ronding",
   "standard_fee": "Standaard",
   "start_date": "Begindatum",
   "start_forging": "Start Forging",
