--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -817,6 +817,7 @@
   "smart_contract_creation": "Criação de Contrato Inteligente",
   "smart_contract_payment": "Pagamento de contrato inteligente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Padrão",
   "start_date": "Data de início",
   "start_forging": "Iniciar o forjamento",
