implemented the spend stuff

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pagament del contracte intel·ligent",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Corba suau",
+  "spend_all": "Passi tot",
   "standard_fee": "Estàndard",
   "start_date": "Data d'inici",
   "start_forging": "Començar a Forjar",
