--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Platba inteligentní smlouvy",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Hladká křivka",
+  "spend_all": "Strávit všechno",
   "standard_fee": "Standard",
   "start_date": "Počátek",
   "start_forging": "Zahájit forging",
