--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -827,6 +827,7 @@
   "smart_contract_payment": "Payment of Smart Contract",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Smooth Curve",
+  "spend_all": "Spend all",
   "standard_fee": "Standard",
   "start_date": "Start Date",
   "start_forging": "Start Forging",
