--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pago de contrato intelixente",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Curva suave",
+  "spend_all": "Pase todo",
   "standard_fee": "Standard",
   "start_date": "Data de inicio",
   "start_forging": "Comenzar a forxar",
