--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Plaćanje pametnog ugovora",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Glatka krivulja",
+  "spend_all": "Provedite sve",
   "standard_fee": "Standard",
   "start_date": "Početni datum",
   "start_forging": "Započni kovati",
