--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pagamento di Smart Contract",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Curva morbida",
+  "spend_all": "Spendi tutto",
   "standard_fee": "Standard",
   "start_date": "Data inizio",
   "start_forging": "Inizia a forgiare",
