--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "スマート契約の支払い",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "滑らかな曲線",
+  "spend_all": "すべてを使う",
   "standard_fee": "標準",
   "start_date": "開始日",
   "start_forging": "鋳造を開始します。",
