--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Betaling van Smart Contract",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Gladde ronding",
+  "spend_all": "Besteed alles",
   "standard_fee": "Standaard",
   "start_date": "Begindatum",
   "start_forging": "Start Forging",
