--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -827,6 +827,7 @@
   "smart_contract_payment": "Płatność inteligentnej umowy",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Gładka krzywa",
+  "spend_all": "Wydaj wszystko",
   "standard_fee": "Standard",
   "start_date": "Data rozpoczęcia",
   "start_forging": "Rozpocznij Forging",
