--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pagamento de contrato inteligente",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Curva suave",
+  "spend_all": "Gaste tudo",
   "standard_fee": "Padrão",
   "start_date": "Data de início",
   "start_forging": "Iniciar o forjamento",
