--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Плаћање паметног уговора",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Смоотх Цурве",
+  "spend_all": "Проведите све",
   "standard_fee": "Стандард",
   "start_date": "Почетни Датум",
   "start_forging": "Почните Ковати",
