--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "平滑曲线",
+  "spend_all": "花一切",
   "standard_fee": "标准",
   "start_date": "开始日期",
   "start_forging": "开始锻造",
