--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Плащане на интелигентен договор",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Гладка крива",
+  "spend_all": "Прекарайте всичко",
   "standard_fee": "стандарт",
   "start_date": "От дата",
   "start_forging": "Започни коване",
