--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Bezahlung von Smart Contract",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Glatte Kurve",
+  "spend_all": "Alles ausgeben",
   "standard_fee": "Standard",
   "start_date": "Startdatum",
   "start_forging": "Blockgeneration starten",
