--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Πληρωμή της έξυπνης σύμβασης",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Λεία καμπύλη",
+  "spend_all": "Περάστε τα πάντα",
   "standard_fee": "Πρότυπο",
   "start_date": "Ημερομηνία έναρξης",
   "start_forging": "Ξεκινήστε Forging",
