--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pago de contrato inteligente",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Curva suave",
+  "spend_all": "Gastar todo",
   "standard_fee": "Estándar",
   "start_date": "Fecha de Inicio",
   "start_forging": "Comenzar a Forjar",
