--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Älykkään sopimuksen maksaminen",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Tasainen käyrä",
+  "spend_all": "Vietä kaikki",
   "standard_fee": "standardi",
   "start_date": "Aloituspäivä",
   "start_forging": "Aloita taonta",
