--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Paiement du contrat intelligent",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Courbe Lisse",
+  "spend_all": "Tout dépenser",
   "standard_fee": "la norme",
   "start_date": "Date de début",
   "start_forging": "Commencer à forger",
