--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "स्मार्ट अनुबंध का भुगतान",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "चिकनी वक्र",
+  "spend_all": "सब कुछ खर्च करते हैं",
   "standard_fee": "मानक",
   "start_date": "प्रारंभ दिनांक",
   "start_forging": "शुरू कर फोर्जिंग",
