--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Pembayaran Kontrak Cerdas",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Kurva halus",
+  "spend_all": "Habiskan semuanya",
   "standard_fee": "Standar",
   "start_date": "Tanggal Mulai",
   "start_forging": "Mulai penyusunan",
