--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Išmaniosios sutarties mokėjimas",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Sklandi kreivė",
+  "spend_all": "Praleiskite viską",
   "standard_fee": "Standartinis",
   "start_date": "Pradžios Data",
   "start_forging": "Pradėti \"kalti",
