--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Plata contractului inteligent",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Smooth Curve",
+  "spend_all": "Petrece totul",
   "standard_fee": "Standard",
   "start_date": "Data începerii",
   "start_forging": "Începe forjarea",
