--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Оплата Смарт Контракт",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Гладкая кривая",
+  "spend_all": "Потрать все",
   "standard_fee": "стандарт",
   "start_date": "Дата начала",
   "start_forging": "Начать Форжинг",
