--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Platba inteligentnej zmluvy",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Hladká krivka",
+  "spend_all": "Stráviť všetko",
   "standard_fee": "štandardné",
   "start_date": "Dátum začatia",
   "start_forging": "Začať kovanie",
