--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Akıllı Sözleşme Ödemesi",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Yumuşak kavis",
+  "spend_all": "Herşeyi harcamak",
   "standard_fee": "Standart",
   "start_date": "Başlangıç tarihi",
   "start_forging": "Dövmeye başla",
