--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -818,6 +818,7 @@
   "smart_contract_payment": "Оплата смарт-контракту",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Плавна крива",
+  "spend_all": "Проведіть все",
   "standard_fee": "Стандарт",
   "start_date": "Дата початку",
   "start_forging": "Почати форжинг",
