--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -180,6 +180,7 @@
   "copy_send_burst_link": "Αντιγραφή του συνδέσμου \"Αποστολή burst\"",
   "copy_send_message_link": "Αντιγραφή του σύνδεσμου \"Αποστολή μηνύματος\"",
   "create_passive": "Create a new account without passphrase",
+  "create_ledger": "Import a Ledger Nano S account",
   "create_poll": "Δημιουργία δημοσκόπησης",
   "create_your_account": "Δημιουργία του λογαριασμού σας",
   "current_price": "Τρέχουσα τιμή",
