--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -180,6 +180,7 @@
   "copy_send_burst_link": "Kopírovať odkaz \"Odoslať BURST",
   "copy_send_message_link": "Kopírovať odkaz \"Odoslať správu",
   "create_passive": "Create a new account without passphrase",
+  "create_ledger": "Import a Ledger Nano S account",
   "create_poll": "Vytvoriť Hlasovanie",
   "create_your_account": "Vytvorenie účtu",
   "current_price": "Aktuálna cena",
