--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -915,6 +915,7 @@
   "new_user_yes": "Yes, I'm a new user",
   "new_user_no": "No, I have an account",
   "create_passive": "Create a new account without passphrase",
+  "create_ledger": "Import a Ledger Nano S account",
   "or": "or"
 ,
   "you_sent_burst": "You sent Burst"
