--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -180,6 +180,7 @@
   "copy_send_burst_link": "'burst Gönder' bağlantısını kopyala",
   "copy_send_message_link": "'Mesaj Gönder' bağlantısını kopyala",
   "create_passive": "Create a new account without passphrase",
+  "create_ledger": "Import a Ledger Nano S account",
   "create_poll": "Anket Oluştur",
   "create_your_account": "Hesap Oluştur",
   "current_price": "Güncel Fiyat",
