feat(login): make login persistent, use login PIN for new accounts, add settings page

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -106,5 +106,13 @@
         "title": "Send"
       }
     }
+  },
+  "settings": {
+    "screens": {
+      "settings": {
+        "title": "Settings",
+        "erase": "Erase all accounts and reset PIN"
+      }
+    }
   }
 }
