--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -54,6 +54,10 @@
         "import": "Добавить",
         "passiveAccountHint": "Пассивные аккаунты используются если известен BURST-адрес, но нет необходимости совершать транзакции. Это безопаснее. Пассивный аккаунт всегда можно преобразовать в активный.",
         "title": "Добавить аккаунт"
+      },
+      "settings": {
+        "title": "Settings",
+        "erase": "Erase all accounts and reset PIN"
       }
     }
   },
