feat(mobile): fix linting

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -111,7 +111,8 @@
     "screens": {
       "settings": {
         "title": "Settings",
-        "erase": "Erase all accounts and reset PIN"
+        "erase": "Erase all accounts and reset PIN",
+        "confirmErase": "Confirm - Erase and Reset"
       }
     }
   }
